--- a/main.html
+++ b/main.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
   <body>
+	  <label for="name">Name</label><br>
+	  <input type="text" id="name" name="name"><br>
+	  <label for="name">Graduation year:</label><br>
+	  <input type="number" id="year" name="year"><br>
+	  <input type="submit" id="button" onclick=url()>
+	 
     <script type="text/javascript" src="./script.js">
+		function url() {
+		<h3 id="url">	<a href="https://localhost:8080/"></h3>
+		}
 </script>
   </body>
 
