--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 	  <input type="text" id="name" name="name"><br>
 	  <label for="name">Graduation year:</label><br>
 	  <input type="number" id="year" name="year"><br>
-	  <input type="submit" id="button" onclick=url()>
+	  <button type="submit" id="button" onclick=url()>Submit</button>
 	 
     <script type="text/javascript" src="./script.js">
 		function url() {
