--- a/main.html
+++ b/main.html
@@ -5,12 +5,11 @@
 	  <input type="text" id="name" name="name"><br>
 	  <label for="name">Graduation year:</label><br>
 	  <input type="number" id="year" name="year"><br>
-	  <button type="submit" id="button" onclick=url()>Submit</button>
+	  <h3 id="url"><a href="https://localhost:8080/"></h3>
+	  <button type="submit" id="button" onclick="#url">Submit</button>
 	 
     <script type="text/javascript" src="./script.js">
-		function url() {
-		<h3 id="url">	<a href="https://localhost:8080/"></h3>
-		}
+	
 </script>
   </body>
 
